[package]
name = "robyn"
version = "0.64.2"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
edition = "2021"
description = "Robyn is a Super Fast Async Python Web Framework with a Rust runtime."
license = "BSD License (BSD)"
homepage = "https://github.com/sparckles/robyn"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "robyn"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version="0.20.0" , features = ["attributes", "tokio-runtime"] }
pyo3-log = "0.8.4"
tokio = { version = "1.26.0", features = ["full"] }
dashmap = "5.4.3"
anyhow = "1.0.69"
actix = "0.13.4"
actix-web-actors = "4.3.0"
actix-web = "4.4.2"
actix-http = "3.3.1"
actix-files = "0.6.2"
futures = "0.3.27"
futures-util = "0.3.27"
matchit = "0.7.3"
socket2 = { version = "0.5.1", features = ["all"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
log = "0.4.17"
pythonize = "0.20.0"
serde = "1.0.187"
serde_json = "1.0.109"
once_cell = "1.8.0"
actix-multipart = "0.6.1"
parking_lot = "0.12.3"

[features]
io-uring = ["actix-web/experimental-io-uring"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[package.metadata.maturin]
name = "robyn"
