[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "robyn"
version = "0.56.2"
description = "A High-Performance, Community-Driven, and Innovator Friendly Web Framework with a Rust runtime."
authors = [{ name = "Sanskar Jethi", email = "sansyrox@gmail.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  'watchdog == 2.2.1',
  'multiprocess == 0.70.14',
  'nestd == 0.3.1',
  'inquirerpy == 0.3.4',
  'rustimport == 1.3.4',
  'orjson == 3.9.15',
# conditional
  "uvloop~=0.19.0; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'"
  ]

[project.scripts]
robyn = "robyn.cli:run"

[project.optional-dependencies]
"templating" = ["jinja2 == 3.0.1"]

[project.urls]
Documentation = "https://robyn.tech/"
Repository = "https://github.com/sparckles/robyn"
Issues = "https://github.com/sparckles/robyn/issues"
Changelog = "https://github.com/sparckles/robyn/blob/main/CHANGELOG.md"


[tool.poetry]
name = "robyn"
version = "0.56.2"
description = "A High-Performance, Community-Driven, and Innovator Friendly Web Framework with a Rust runtime."
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "0.3.4"
maturin = "0.14.12"
watchdog = "2.2.1"
multiprocess = "0.70.14"
nestd = "0.3.1"
uvloop = { version = "0.19.0", markers = "sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')" }
jinja2 = { version = "3.0.1", optional = true }
rustimport = "^1.3.4"
orjson = "^3.9.15"

[tool.poetry.extras]
templating = ["jinja2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "0.1.3"
black = "23.1"
isort = "5.11.5"
pre-commit = "2.21.0"
commitizen = "2.40"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.2.1"
pytest-codspeed = "1.2.2"
requests = "2.28.2"
nox = "2023.4.22"
websocket-client = "1.5.0"

[tool.poetry.scripts]
test_server = { callable = "integration_tests.base_routes:main" }

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.maturin]
module-name = "robyn"
