[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "robyn"
version = "0.78.0"
description = "A Super Fast Async Python Web Framework with a Rust runtime."
readme = "README.md"
authors = [{ name = "Sanskar Jethi", email = "sansyrox@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "inquirerpy == 0.3.4",
  "multiprocess == 0.70.14",
  "orjson >= 3.11.5, < 4.0.0",
  "rustimport == 1.3.4",
  # conditional
  "uvloop~=0.22.1; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'",
  "watchdog == 4.0.1",
]

[project.optional-dependencies]
"templating" = ["jinja2 == 3.0.1"]

[project.urls]
Documentation = "https://robyn.tech/"
Repository = "https://github.com/sparckles/robyn"
Issues = "https://github.com/sparckles/robyn/issues"
Changelog = "https://github.com/sparckles/robyn/blob/main/CHANGELOG.md"

[project.scripts]
robyn = "robyn.cli:run"
test_server = "integration_tests.base_routes:main"

[dependency-groups]
dev = [
  "black==23.1",
  "commitizen==2.40",
  "isort==5.11.5",
  "maturin==1.7.4",
  "pre-commit==2.21.0",
  "ruff>=0.9.0",
]
test = [
  "nox==2023.4.22",
  "pytest>=9.0.2",
  "pytest-codspeed>=4.2.0",
  "requests==2.28.2",
  "websocket-client==1.5.0",
]


[tool.poetry]
name = "robyn"
version = "0.78.0"
description = "A Super Fast Async Python Web Framework with a Rust runtime."
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
inquirerpy = "0.3.4"
maturin = "1.7.4"
watchdog = "4.0.1"
multiprocess = "0.70.14"
uvloop = { version = "0.22.1", markers = "sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')" }
jinja2 = { version = "3.0.1", optional = true }
rustimport = "^1.3.4"
orjson = "^3.11.5"

[tool.poetry.extras]
templating = ["jinja2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
black = "23.1"
isort = "5.11.5"
pre-commit = "2.21.0"
commitizen = "2.40"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-codspeed = "^4.2.0"
requests = "2.28.2"
nox = "2023.4.22"
websocket-client = "1.5.0"

[tool.poetry.scripts]
test_server = { callable = "integration_tests.base_routes:main" }

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.isort]
profile = "black"
line_length = 160

[tool.black]
line-length = 160
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
markers = [
  "benchmark: marks tests as benchmarks for performance measurement (deselect with '-m \"not benchmark\"')",
]

[tool.maturin]
module-name = "robyn"
